datepicker and scrollbar fixed

--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-:root {
-  --primary-color: #387E85; /* Initial primary color */
+::-webkit-scrollbar {
+  width: 8px;
+
 }
 
-body{
+::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 5px;
+}
 
+body {
+  overflow: hidden;
   background-color: #91CED4;
 }
