--- a/src/styles/DatePicker.module.css
+++ b/src/styles/DatePicker.module.css
@@ -1,3 +1,40 @@
+.customDatepicker {
+  height: 32px;
+  width: 70px;
+  background-color: #DAEFF1;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: 2px solid #387E85;
+
+}
+
+.customCalendar {}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .button-53 {
   background-color: #3DD1E7;
   border: 0 solid #E5E7EB;
